--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.23",
+    "@graphql-yoga/nestjs": "^3.13.4",
+    "@graphql-yoga/render-graphiql": "^5.13.4",
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -27,22 +30,22 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
-    "class-transformer": "^0.5.1",
-    "graphql-scalars": "^1.24.2",
-    "graphql-type-json": "^0.3.2",
-    "pg": "^8.15.6",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.22",
-    "prisma": "^5.18.0",
-    "reflect-metadata": "^0.2.2",
-    "type-graphql": "^2.0.0-rc.2",
-    "typegraphql-prisma": "^0.28.0",
-    "@graphql-tools/schema": "^10.0.23",
-    "@graphql-yoga/render-graphiql": "^5.13.4",
     "@prisma/client": "^5.18.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cross-env": "^7.0.3",
-    "graphql": "^16.11.0"
+    "graphql": "^16.11.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.24.2",
+    "graphql-type-json": "^0.3.2",
+    "graphql-yoga": "^5.13.4",
+    "pg": "^8.15.6",
+    "prisma": "^5.18.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "type-graphql": "^2.0.0-rc.2",
+    "typegraphql-prisma": "^0.28.0",
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
