--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.1.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^5.18.0",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cross-env": "^7.0.3",
@@ -39,6 +41,7 @@
     "graphql-scalars": "^1.24.2",
     "graphql-type-json": "^0.3.2",
     "graphql-yoga": "^5.13.4",
+    "nodemailer": "^7.0.3",
     "pg": "^8.15.6",
     "prisma": "^5.18.0",
     "reflect-metadata": "^0.2.2",
@@ -56,6 +59,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
