--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@graphql-yoga/nestjs": "^3.13.4",
     "@graphql-yoga/render-graphiql": "^5.13.4",
     "@nestjs/apollo": "^13.1.0",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -38,6 +39,7 @@
     "@prisma/client": "^5.18.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.8",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cross-env": "^7.0.3",
@@ -46,6 +48,7 @@
     "graphql-scalars": "^1.24.2",
     "graphql-type-json": "^0.3.2",
     "graphql-yoga": "^5.13.4",
+    "ioredis": "^5.6.1",
     "micromatch": "^4.0.8",
     "passport-jwt": "^4.0.1",
     "pg": "^8.15.6",
