--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^5.18.0",
@@ -42,6 +43,8 @@
     "graphql-type-json": "^0.3.2",
     "graphql-yoga": "^5.13.4",
     "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.15.6",
     "prisma": "^5.18.0",
     "reflect-metadata": "^0.2.2",
@@ -60,6 +63,8 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
