--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.2",
     "@prisma/client": "^5.18.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -42,6 +45,7 @@
     "graphql-scalars": "^1.24.2",
     "graphql-type-json": "^0.3.2",
     "graphql-yoga": "^5.13.4",
+    "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -49,6 +53,7 @@
     "prisma": "^5.18.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "type-graphql": "^2.0.0-rc.2",
     "typegraphql-prisma": "^0.28.0",
     "typeorm": "^0.3.22"
@@ -59,9 +64,10 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.15.29",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
